--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,7 @@
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+    animation: App-logo-spin 20s linear;
   }
 }
 
@@ -150,4 +150,281 @@
   height: 1em !important;
   line-height: 1em !important;
   background-color: #282c34 !important;
+}
+
+.heart-icon-container {
+  position: relative;
+}
+.heart-icon-wrap {
+  display: inline-block;
+  box-sizing: border-box;
+  width: 100px;
+  height: 100px;
+  border-radius: 100px;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  animation: 0.5s anime-impact linear;
+}
+.heart-icon {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  animation: 0.5s anime linear;
+}
+.heart-icon-impact2 {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  animation: 0.5s anime-impact-2 linear;
+}
+.heart-icon-impact3 {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: aquamarine;
+  /* width: 100px;
+  height: 100px; */
+  border-radius: 100%;
+  /* animation: ping 1s cubic-bezier(0, 0, 0.2, 1) infinite; */
+  animation: ping 0.5s cubic-bezier(0, 0, 0.2, 1);
+}
+@keyframes ping {
+  0% {
+    /* width: 0;
+    height: 0; */
+  }
+  85%,
+  100% {
+    width: 100px;
+    height: 100px;
+    transform: scale(1.5);
+    opacity: 0;
+  }
+}
+@keyframes anime {
+  0% {
+    opacity: 0;
+    transform: scale(0);
+  }
+  39% {
+    opacity: 0;
+  }
+  40% {
+    opacity: 1;
+    transform: scale(0.1);
+  }
+  45% {
+    /* transform: scale(0.3); */
+  }
+  50% {
+    /* transform: scale(0.5); */
+  }
+  40% {
+    transform: scale(0.5);
+  }
+  50% {
+    transform: scale(0.7);
+  }
+  60% {
+    transform: scale(0.9);
+  }
+  70% {
+    transform: scale(1.2);
+  }
+  80% {
+    transform: scale(1.3);
+  }
+  90% {
+    transform: scale(1.2);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+@keyframes anime-impact {
+  0% {
+    background-color: mediumvioletred;
+    transform: scale(0.1);
+  }
+  3% {
+    background-color: mediumvioletred;
+    transform: scale(0.5);
+  }
+  6% {
+    background-color: mediumvioletred;
+    transform: scale(0.7);
+  }
+  9% {
+    background-color: mediumvioletred;
+    transform: scale(0.9);
+  }
+  /* 12% {
+        background-color: mediumvioletred;
+        transform: scale(0.9);
+      }
+      15% {
+        background-color: mediumvioletred;
+        transform: scale(1.0);
+      } */
+  18% {
+    background-color: mediumvioletred;
+    transform: scale(1.2);
+  }
+  21% {
+    /* background-color: mediumvioletred; */
+    transform: scale(1.5);
+  }
+  24% {
+    /* background-color: plum; */
+    /* background-color: mediumvioletred; */
+    transform: scale(1.2);
+  }
+  27% {
+    /* background-color: mediumvioletred; */
+    transform: scale(1);
+  }
+  30% {
+    border: 30px mediumvioletred solid;
+  }
+  40% {
+    background-color: transparent;
+    border: 10px mediumvioletred solid;
+  }
+}
+@keyframes anime-impact-2 {
+  0% {
+    opacity: 0;
+    transform: scale(0);
+  }
+  40% {
+    opacity: 0;
+    transform: scale(0);
+  }
+  /* 45% { */
+  /* transform: scale(0.3); */
+  /* } */
+  /* 50% { */
+  /* transform: scale(0.5); */
+  /* } */
+  60% {
+    transform: scale(0.5);
+  }
+  65% {
+    transform: scale(0.7);
+  }
+  70% {
+    transform: scale(0.9);
+  }
+  75% {
+    transform: scale(1.2);
+  }
+  80% {
+    transform: scale(1.3);
+  }
+  90% {
+    transform: scale(1.2);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+/* 
+body {
+  margin: 0;
+}
+
+p {
+  margin: 10px;
+} */
+
+/* .container {
+  position: relative;
+  width: 100%;
+  height: 250px;
+  overflow: hidden;
+} */
+
+/* https://1-notes.com/css-colorful-explosion/ */
+.explosions span {
+  position: absolute;
+  width: 30px;
+  height: 30px;
+  border-radius: 100%;
+  transform: scale(0);
+}
+
+.explosions span:nth-child(1) {
+  top: 75px;
+  left: 75px;
+  animation: explosions-anim 0.5s 0s linear, color-anim 2.5s 0s linear;
+}
+
+.explosions span:nth-child(2) {
+  top: 25px;
+  left: 25px;
+  animation: explosions-anim 0.5s 0.2s linear, color-anim 2.5s -1s linear;
+}
+
+.explosions span:nth-child(3) {
+  top: 50px;
+  left: 50px;
+  animation: explosions-anim 0.5s 0.4s linear, color-anim 2.5s -0.5s linear;
+}
+
+.explosions span:nth-child(4) {
+  top: 100px;
+  left: 50px;
+  animation: explosions-anim 2s 0.6s linear, color-anim 2.5s -3s linear;
+}
+
+.explosions span:nth-child(5) {
+  top: 100px;
+  left: 100px;
+  animation: explosions-anim 0.5s 0.8s linear, color-anim 2.5s -4s linear;
+}
+
+@keyframes explosions-anim {
+  0% {
+    transform: scale(0);
+  }
+
+  99.9% {
+    transform: scale(1);
+  }
+
+  100% {
+    transform: scale(0);
+  }
+}
+
+@keyframes color-anim {
+  0%,
+  100% {
+    background: #84ff84;
+  }
+
+  20% {
+    background: #84ffff;
+  }
+
+  40% {
+    background: #ff84ff;
+  }
+
+  60% {
+    background: #ff8484;
+  }
+
+  80% {
+    background: #ffff84;
+  }
 }
